# Quto-AI

./: .gitignore  CONTINUITY.md  LICENSE  README.md  REPORT.md  prompt.md  pyproject.toml  render.yaml  requirements-tf.txt  risk_engine_spec.md  scaler.json
agent_worker/: .dockerignore  .env.example  .gitignore  .wid.txt  DEPLOY.md  Dockerfile  ENDPOINTS.md  Procfile  README.md  __init__.py  api.py  celery_app.py  config.py  data_repo.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  repo.py  requirements.txt  tasks.py
agent_worker/ai/: __init__.py  chat_model.py  llm.py  risk_engine.py  tai_dam.py  tts.py
agent_worker/db/: schema.sql
agent_worker/docs/: AGENT_LOGIC.md
agent_worker/graph/: __init__.py  agent_tools.py  build.py  nodes.py  runner.py  state.py
agent_worker/infra/: __init__.py  cache.py  db.py  messages.py  supabase_data.py
agent_worker/shared/: __init__.py  alert.py  common.py  forecast.py  geo.py  geo_data.py  weather.py
agent_worker/tools/: __init__.py  geo_tool.py  maps_tool.py  message_formatter.py  recommend_tool.py  risk_engine_tool.py  shelter_tool.py  speaker_tool.py  telegram_tool.py  user_api_tool.py  weather_tool.py  zalo_formatter.py  zalo_tool.py
backend/: .env.example  .gitignore  Dockerfile  README.md  render.yaml  requirements.txt
config/: thresholds.yaml
data-pipeline/: README.md  SOURCES.md
docs/: DEPLOYMENT.md  TRAINING.md
frontend/: .env  .env.example  .gitignore  README.md  design-qa.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
tests/: conftest.py  test_aggregate.py  (+13 more)
(+175 files in other folders)
