[project]
name = "agent-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "celery>=5.3",
    "httpx>=0.27",
    "langgraph>=0.2.0",
    "openai>=1.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "sqlalchemy>=2.0",
]
